# aichhoernchen-backend

./: .dockerignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.devcontainer/: .env  devcontainer.json  docker-compose.yml  local.env.example
.devcontainer/scripts/: post-start.sh
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: continuous_delivery.yaml  continuous_integration.yml
docker/: start.sh
docs/: index.md
docs/getting_started/: installation.md
src/aichhoernchen/: manage.py
src/aichhoernchen/aichhoernchen/: asgi.py  settings.py  urls.py  wsgi.py
src/aichhoernchen/finder/: admin.py  agent.py  models.py  schema.py  types.py  urls.py
src/aichhoernchen/finder/agent/: service.py  types.py
src/aichhoernchen/finder/agent/prompts/: image.md
src/aichhoernchen/finder/graphql/: mutations.py  queries.py
src/aichhoernchen/finder/management/commands/: default_deposits.py  default_objects.py
src/aichhoernchen/finder/migrations/: 0001_initial.py  0002_alter_foundobject_deposit_alter_foundobject_finder_and_more.py  0003_remove_foundobject_finder_foundobject_finder_email_and_more.py  0004_alter_foundobject_lat_alter_foundobject_long_and_more.py  0005_alter_foundobject_deposit.py  0006_foundobject_verified.py  0007_foundobject_key.py
src/aichhoernchen/finder/prompts/: image_prompt.md
src/aichhoernchen/finder/services/: __init__.py  image_analysis.py  openai_client.py
src/aichhoernchen/finder/static/: objects.json  offices.json
